syntax = "proto3";
package vehicle_data;
option go_package = "github.com/bptlab/cepta/models/events/wagontrainrun";
option java_package = "org.bptlab.cepta.models.events.wagontrainrun";
option java_outer_classname = "WagonTrainRunDataProtos";

import "google/protobuf/timestamp.proto";

message WagonTrainRunData {
    int64 event_type = 1;
    string event_type_short = 2;
    string event_type_long = 3;
    google.protobuf.Timestamp ingestion_time = 4;
    int64 wagon_id = 5;
    int64 train_id = 6;
    google.protobuf.Timestamp prod_date = 7;
    google.protobuf.Timestamp planned_event_time = 8;
    google.protobuf.Timestamp event_time = 9;
    int64 delay = 10;
    int64 station_code_short = 11;
    string station_name = 12;
    int64 start_station_code_short = 13;
    string start_station_name = 14;
    int64 end_station_code_short = 15;
    string end_station_name = 16;
    int64 weight = 17;
} 
